# synology_abfb_log_parser

./: .gitignore  LICENSE.md  README.md  pyproject.toml  synology_activebackuplogs-example-1.py  synology_activebackuplogs-example-2.py  synology_activebackuplogs.py
.github/workflows/: publish.yml
examples/: README.md  trmm-example-1.py  trmm-example-2.py  trmm-example-3.py  trmm-synology_abfb_auto_update.py  trmm-synology_abfb_backup_days_ago.py  trmm-synology_abfb_error_check.py  trmm-synology_abfb_not_complete.py
scripts/: build.sh  deploy.sh
src/synology_abfb_log_parser/: __init__.py  abfb_log_parser.py  synology_abfb_log_parser.py
synology_abfb_log_parser/: __init__.py  synology_abfb_log_parser.py
